# gh-notify

./: AGENTS.md  README.md  gh-notify.desktop  pyproject.toml
src/gh_notify/: __init__.py  __main__.py  app.py  config.py  github_client.py  main_window.py  models.py  notifier.py  poller.py  pr_store.py  settings_dialog.py
