[project]
name = "gh-notify"
version = "0.1.0"
description = "GitHub PR monitor for KDE Plasma with system tray and desktop notifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "bootswithdefer" }]
dependencies = [
    "PyQt6>=6.7.0",
    "httpx>=0.27.0",
    "desktop-notifier>=6.0.0",
]

[project.scripts]
gh-notify = "gh_notify.__main__:main"

[project.gui-scripts]
gh-notify-gui = "gh_notify.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_notify"]

[tool.ruff]
line-length = 160
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
